# homelab-dashboard

./: CMakeLists.txt  Dockerfile  README.md  app.py  main.cpp  start.sh
templates/: base.html  index.html  load.html
